--- a/product/src/lottery/index.css
+++ b/product/src/lottery/index.css
@@ -105,7 +105,7 @@ button {
   border-radius: 10px;
   letter-spacing: 4px;
   /* background: transparent; */
-  background: linear-gradient(90deg, #ff5656,#fe001e);
+  background: linear-gradient(90deg, #ff5656, #fe001e);
   /* outline: 1px solid rgba(127, 255, 255, 0.75); */
   border: 0;
   padding: 1.6vh 4vh;
@@ -265,30 +265,36 @@ button:active {
 }
 
 .progress-bar-striped {
-  background-image: -webkit-linear-gradient(45deg,
-      rgba(255, 255, 255, 0.15) 25%,
-      transparent 25%,
-      transparent 50%,
-      rgba(255, 255, 255, 0.15) 50%,
-      rgba(255, 255, 255, 0.15) 75%,
-      transparent 75%,
-      transparent);
-  background-image: -o-linear-gradient(45deg,
-      rgba(255, 255, 255, 0.15) 25%,
-      transparent 25%,
-      transparent 50%,
-      rgba(255, 255, 255, 0.15) 50%,
-      rgba(255, 255, 255, 0.15) 75%,
-      transparent 75%,
-      transparent);
-  background-image: linear-gradient(45deg,
-      rgba(255, 255, 255, 0.15) 25%,
-      transparent 25%,
-      transparent 50%,
-      rgba(255, 255, 255, 0.15) 50%,
-      rgba(255, 255, 255, 0.15) 75%,
-      transparent 75%,
-      transparent);
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.15) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.15) 50%,
+    rgba(255, 255, 255, 0.15) 75%,
+    transparent 75%,
+    transparent
+  );
+  background-image: -o-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.15) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.15) 50%,
+    rgba(255, 255, 255, 0.15) 75%,
+    transparent 75%,
+    transparent
+  );
+  background-image: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.15) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.15) 50%,
+    rgba(255, 255, 255, 0.15) 75%,
+    transparent 75%,
+    transparent
+  );
   -webkit-background-size: 8px 8px;
   background-size: 8px 8px;
 }
@@ -368,10 +374,9 @@ button:active {
   cursor: not-allowed;
 }
 
-
 .shine span {
   position: absolute;
-  display: block
+  display: block;
 }
 
 .shine span:nth-child(1) {
@@ -380,17 +385,17 @@ button:active {
   width: 100%;
   height: 2px;
   background: linear-gradient(90deg, transparent, #03e9f4);
-  animation: animate1 1s linear infinite
+  animation: animate1 1s linear infinite;
 }
 
 @keyframes animate1 {
   0% {
-    left: -100%
+    left: -100%;
   }
 
   50%,
   100% {
-    left: 100%
+    left: 100%;
   }
 }
 
@@ -401,17 +406,17 @@ button:active {
   height: 100%;
   background: linear-gradient(180deg, transparent, #03e9f4);
   animation: animate2 1s linear infinite;
-  animation-delay: .25s
+  animation-delay: 0.25s;
 }
 
 @keyframes animate2 {
   0% {
-    top: -100%
+    top: -100%;
   }
 
   50%,
   100% {
-    top: 100%
+    top: 100%;
   }
 }
 
@@ -422,17 +427,17 @@ button:active {
   height: 2px;
   background: linear-gradient(270deg, transparent, #03e9f4);
   animation: animate3 1s linear infinite;
-  animation-delay: .50s
+  animation-delay: 0.5s;
 }
 
 @keyframes animate3 {
   0% {
-    right: -100%
+    right: -100%;
   }
 
   50%,
   100% {
-    right: 100%
+    right: 100%;
   }
 }
 
@@ -443,26 +448,24 @@ button:active {
   height: 100%;
   background: linear-gradient(360deg, transparent, #03e9f4);
   animation: animate4 1s linear infinite;
-  animation-delay: .75s
+  animation-delay: 0.75s;
 }
 
 @keyframes animate4 {
   0% {
-    bottom: -100%
+    bottom: -100%;
   }
 
   50%,
   100% {
-    bottom: 100%
+    bottom: 100%;
   }
 }
-
 
 .shine.prize-item {
   /* width: 24vh; */
   margin: 1.8vh 0;
   opacity: 0;
-
 }
 
 .prize-mess {
@@ -480,7 +483,6 @@ button:active {
   vertical-align: middle;
   padding: 0 6px;
   opacity: 0;
-
 }
 
 .qipao-container {
@@ -491,7 +493,6 @@ button:active {
   width: 24vh;
   z-index: -2;
   opacity: 0;
-
 }
 
 .qipao {
@@ -561,6 +562,10 @@ button:active {
   display: block;
 }
 
+.hidden {
+  opacity: 0;
+}
+
 #lottery {
   animation: breath 1.6s linear infinite;
   box-shadow: 0px 0px 15px rgb(127 255 255 / 75%);
@@ -587,94 +592,70 @@ body {
   margin: 0;
   min-height: 100vh;
   background-color: #e493d0;
-  background-image:
-  radial-gradient(closest-side, rgba(235, 105, 78, 1), rgba(235, 105, 78, 0)),
-  radial-gradient(closest-side, rgba(243, 11, 164, 1), rgba(243, 11, 164, 0)),
-  radial-gradient(closest-side, rgba(254, 234, 131, 1), rgba(254, 234, 131, 0)),
-  radial-gradient(closest-side, rgba(170, 142, 245, 1), rgba(170, 142, 245, 0)),
-  radial-gradient(closest-side, rgba(248, 192, 147, 1), rgba(248, 192, 147, 0));
-  background-size:
-  130vmax 130vmax,
-  80vmax 80vmax,
-  90vmax 90vmax,
-  110vmax 110vmax,
-  90vmax 90vmax;
-  background-position:
-  -80vmax -80vmax,
-  60vmax -30vmax,
-  10vmax 10vmax,
-  -30vmax -10vmax,
-  50vmax 50vmax;
+  background-image: radial-gradient(
+      closest-side,
+      rgba(235, 105, 78, 1),
+      rgba(235, 105, 78, 0)
+    ),
+    radial-gradient(closest-side, rgba(243, 11, 164, 1), rgba(243, 11, 164, 0)),
+    radial-gradient(
+      closest-side,
+      rgba(254, 234, 131, 1),
+      rgba(254, 234, 131, 0)
+    ),
+    radial-gradient(
+      closest-side,
+      rgba(170, 142, 245, 1),
+      rgba(170, 142, 245, 0)
+    ),
+    radial-gradient(
+      closest-side,
+      rgba(248, 192, 147, 1),
+      rgba(248, 192, 147, 0)
+    );
+  background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+    110vmax 110vmax, 90vmax 90vmax;
+  background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
+    -30vmax -10vmax, 50vmax 50vmax;
   background-repeat: no-repeat;
   animation: 10s movement linear infinite;
-  }
+}
 
-  body::after {
-    content: '';
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    }
-    @keyframes movement {
-      0%, 100% {
-      background-size:
-      130vmax 130vmax,
-      80vmax 80vmax,
-      90vmax 90vmax,
-      110vmax 110vmax,
-      90vmax 90vmax;
-      background-position:
-      -80vmax -80vmax,
-      60vmax -30vmax,
-      10vmax 10vmax,
-      -30vmax -10vmax,
-      50vmax 50vmax;
-    }
-    25% {
-    background-size:
-    100vmax 100vmax,
-    90vmax 90vmax,
-    100vmax 100vmax,
-    90vmax 90vmax,
-    60vmax 60vmax;
-    background-position:
-    -60vmax -90vmax,
-    50vmax -40vmax,
-    0vmax -20vmax,
-    -40vmax -20vmax,
-    40vmax 60vmax;
-    }
-    50% {
-    background-size:
-    80vmax 80vmax,
-    110vmax 110vmax,
-    80vmax 80vmax,
-    60vmax 60vmax,
-    80vmax 80vmax;
-    background-position:
-    -50vmax -70vmax,
-    40vmax -30vmax,
-    10vmax 0vmax,
-    20vmax 10vmax,
-    30vmax 70vmax;
-    }
-    75% {
-    background-size:
-    90vmax 90vmax,
-    90vmax 90vmax,
-    100vmax 100vmax,
-    90vmax 90vmax,
-    70vmax 70vmax;
-    background-position:
-    -50vmax -40vmax,
-    50vmax -30vmax,
-    20vmax 0vmax,
-    -10vmax 10vmax,
-    40vmax 60vmax;
-    }
-  }    
+body::after {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+@keyframes movement {
+  0%,
+  100% {
+    background-size: 130vmax 130vmax, 80vmax 80vmax, 90vmax 90vmax,
+      110vmax 110vmax, 90vmax 90vmax;
+    background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
+      -30vmax -10vmax, 50vmax 50vmax;
+  }
+  25% {
+    background-size: 100vmax 100vmax, 90vmax 90vmax, 100vmax 100vmax,
+      90vmax 90vmax, 60vmax 60vmax;
+    background-position: -60vmax -90vmax, 50vmax -40vmax, 0vmax -20vmax,
+      -40vmax -20vmax, 40vmax 60vmax;
+  }
+  50% {
+    background-size: 80vmax 80vmax, 110vmax 110vmax, 80vmax 80vmax,
+      60vmax 60vmax, 80vmax 80vmax;
+    background-position: -50vmax -70vmax, 40vmax -30vmax, 10vmax 0vmax,
+      20vmax 10vmax, 30vmax 70vmax;
+  }
+  75% {
+    background-size: 90vmax 90vmax, 90vmax 90vmax, 100vmax 100vmax,
+      90vmax 90vmax, 70vmax 70vmax;
+    background-position: -50vmax -40vmax, 50vmax -30vmax, 20vmax 0vmax,
+      -10vmax 10vmax, 40vmax 60vmax;
+  }
+}
