--- a/product/src/lottery/index.css
+++ b/product/src/lottery/index.css
@@ -607,7 +607,7 @@ button:active {
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: rgb(208, 89, 81);
+  /* background-color: rgb(208, 89, 81);
   background-image: radial-gradient(
       closest-side,
       rgb(211, 81, 55),
@@ -629,8 +629,9 @@ body {
     110vmax 110vmax, 90vmax 90vmax;
   background-position: -80vmax -80vmax, 60vmax -30vmax, 10vmax 10vmax,
     -30vmax -10vmax, 50vmax 50vmax;
-  background-repeat: no-repeat;
-  animation: 10s movement linear infinite;
+  background-repeat: no-repeat; */
+  /* animation: 10s movement linear infinite; */
+  /* background-image: url(../img/bg.jpg); */
 }
 
 body::after {
@@ -641,8 +642,8 @@ body::after {
   height: 100%;
   top: 0;
   left: 0;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); */
 }
 @keyframes movement {
   0%,
@@ -670,4 +671,13 @@ body::after {
     background-position: -50vmax -40vmax, 50vmax -30vmax, 20vmax 0vmax,
       -10vmax 10vmax, 40vmax 60vmax;
   }
+}
+.bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
 }
