--- a/product/src/lottery/index.css
+++ b/product/src/lottery/index.css
@@ -671,3 +671,13 @@ body::after {
       -10vmax 10vmax, 40vmax 60vmax;
   }
 }
+
+.bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  object-fit: cover;
+}
